<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context=".ui.activities.NewRegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="25sp">
        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        android:textColor="@color/blue"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/enter_user_register"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/user"
            android:textColorHint="@color/gray_light"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:importantForAutofill="noExcludeDescendants"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:textColorHint="@color/gray_light"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:importantForAutofill="noExcludeDescendants"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:textColorHint="@color/gray_light"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:fontFamily="@font/montserrat_regular"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_register_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_light"
            android:gravity="center"
            android:layout_margin="35dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/send_register"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>