<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar_text_activity"
        layout="@layout/tool_bar_util"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/layout_20_dp"
            android:paddingStart="@dimen/layout_20_dp"
            android:paddingEnd="@dimen/layout_20_dp"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/enter_data_grow_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:padding="@dimen/layout_20_dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/name_grow"
                    android:textColorHint="@color/gray_light"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_name_grow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:importantForAutofill="noExcludeDescendants"
                        android:layout_marginBottom="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/description_grow"
                    android:textColorHint="@color/gray_light"
                    app:counterEnabled="true"
                    app:counterMaxLength="250"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/text_input_description_grow"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLength="249"
                        android:maxLines="100" />
                </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_register_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue"
                android:gravity="center"
                android:layout_margin="35dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/crear_grow"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>