<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo_seed_grower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@mipmap/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:padding="@dimen/layout_20_dp"
            android:gravity="end">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:textColorHint="@color/gray_light"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:importantForAutofill="noExcludeDescendants"
                    android:layout_marginBottom="10dp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:textColorHint="@color/gray_light"
                app:endIconMode="password_toggle"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="208dp"
                android:layout_height="49dp"
                android:layout_marginTop="16dp"
                android:background="@color/blue"
                android:gravity="center"
                android:paddingTop="4dp"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingBottom="4dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="208dp"
                android:layout_height="49dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/border_background"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/register"
                android:textColor="@color/blue"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>